--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -15,7 +15,7 @@
             android:id="@+id/back_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="@dimen/margin_quoter"
             android:layout_marginTop="12dp"
             android:padding="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
             android:id="@+id/notification_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="24dp"
+            android:layout_margin="@dimen/margin_x1_5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_notification" />
@@ -71,9 +71,9 @@
                 android:id="@+id/account_background"
                 android:layout_width="match_parent"
                 android:layout_height="74dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginTop="@dimen/margin_x1_5"
+                android:layout_marginEnd="@dimen/margin_x1_5"
                 android:src="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
                 android:id="@+id/add_account_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="@dimen/margin_x1_5"
                 android:text="@string/add_account"
                 android:textColor="@color/withdraws_yellow"
                 android:textSize="20sp"
@@ -117,9 +117,9 @@
                 android:id="@+id/new_account_background"
                 android:layout_width="match_parent"
                 android:layout_height="405dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginTop="@dimen/margin_x1_5"
+                android:layout_marginEnd="@dimen/margin_x1_5"
                 android:src="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +129,7 @@
                 android:id="@+id/new_add_account_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="@dimen/margin_x1_5"
                 android:layout_marginTop="22dp"
                 android:text="@string/add_account"
                 android:textColor="@color/withdraws_yellow"
@@ -151,7 +151,7 @@
                 android:id="@+id/add_account_button"
                 android:layout_width="0dp"
                 android:layout_height="56dp"
-                android:layout_margin="24dp"
+                android:layout_margin="@dimen/margin_x1_5"
                 android:background="@drawable/bg_intro_btn"
                 android:text="@string/add_button_text"
                 android:textAllCaps="false"
@@ -177,9 +177,9 @@
                 android:id="@+id/background"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginTop="@dimen/margin_x1_5"
+                android:layout_marginEnd="@dimen/margin_x1_5"
                 android:background="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -189,7 +189,7 @@
                 android:id="@+id/bank_name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="@dimen/margin_x1_5"
                 android:layout_marginTop="14dp"
                 android:text="ПАО “Сбербанк”"
                 android:textColor="@color/withdraws_gray"
@@ -201,7 +201,7 @@
                 android:id="@+id/order_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="@dimen/margin_x1_5"
                 android:layout_marginTop="6dp"
                 android:text="Р/с 408190009938888837"
                 android:textColor="@color/withdraws_gray"
@@ -213,7 +213,7 @@
                 android:id="@+id/name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="@dimen/margin_x1_5"
                 android:layout_marginTop="8dp"
                 android:text="Поликин Г. И"
                 android:textColor="@color/gray_profile"
@@ -225,7 +225,7 @@
                 android:id="@+id/delete_icon"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
-                android:layout_margin="16dp"
+                android:layout_margin="@dimen/margin_main"
                 app:layout_constraintEnd_toEndOf="@+id/background"
                 app:layout_constraintTop_toTopOf="@+id/background"
                 app:srcCompat="@drawable/ic_delete" />
@@ -263,9 +263,9 @@
                 android:id="@+id/card_background"
                 android:layout_width="match_parent"
                 android:layout_height="74dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginTop="@dimen/margin_x1_5"
+                android:layout_marginEnd="@dimen/margin_x1_5"
                 android:src="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -275,7 +275,7 @@
                 android:id="@+id/add_card_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="@dimen/margin_x1_5"
                 android:text="@string/add_card"
                 android:textColor="@color/withdraws_yellow"
                 android:textSize="20sp"
@@ -287,7 +287,7 @@
                 android:id="@+id/add_card_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
+                android:layout_marginEnd="@dimen/margin_x1_5"
                 app:layout_constraintBottom_toBottomOf="@id/card_background"
                 app:layout_constraintEnd_toEndOf="@+id/card_background"
                 app:layout_constraintTop_toTopOf="@id/card_background"
