--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -10,7 +10,7 @@
         android:id="@+id/back_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/margin_quoter"
         android:layout_marginTop="12dp"
         android:padding="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/notification_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
+        android:layout_margin="@dimen/margin_x1_5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_notification" />
@@ -87,7 +87,7 @@
         android:id="@+id/yandex_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_main"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/yandex_title"
         app:layout_constraintStart_toEndOf="@+id/yandex_image"
@@ -99,7 +99,7 @@
         android:id="@+id/yandex_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_main"
         android:text="@string/yandex_title"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
@@ -111,7 +111,7 @@
         android:layout_width="104dp"
         android:layout_height="44dp"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_main"
         android:background="@drawable/bg_registration_btn"
         android:gravity="center"
         android:padding="8dp"
@@ -136,7 +136,7 @@
         android:id="@+id/citymobil_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_main"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/citymobil_title"
         app:layout_constraintStart_toEndOf="@+id/citymobil_image"
@@ -148,7 +148,7 @@
         android:id="@+id/citymobil_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_main"
         android:text="@string/citymobil_title"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
@@ -160,7 +160,7 @@
         android:layout_width="104dp"
         android:layout_height="44dp"
         android:layout_marginTop="26dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_main"
         android:background="@drawable/bg_registration_btn"
         android:gravity="center"
         android:padding="8dp"
@@ -185,7 +185,7 @@
         android:id="@+id/gett_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_main"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/gett_title"
         app:layout_constraintStart_toEndOf="@+id/gett_image"
@@ -197,7 +197,7 @@
         android:id="@+id/gett_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_main"
         android:text="@string/gett_title"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
@@ -209,7 +209,7 @@
         android:layout_width="104dp"
         android:layout_height="44dp"
         android:layout_marginTop="26dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_main"
         android:background="@drawable/bg_registration_btn"
         android:gravity="center"
         android:padding="8dp"
@@ -246,7 +246,7 @@
         android:id="@+id/gazprom_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_main"
         android:text="1000 ₽"
         android:textColor="@color/balance_green"
         android:textSize="18sp"
@@ -258,7 +258,7 @@
         android:id="@+id/gazprom_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_main"
         android:text="@string/gazprom_title"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
@@ -269,7 +269,7 @@
         android:id="@+id/replenish_gazprom_tv"
         android:layout_width="104dp"
         android:layout_height="44dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_main"
         android:background="@drawable/bg_registration_btn"
         android:gravity="center"
         android:padding="8dp"
