--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
             android:id="@+id/phone_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="24dp"
+            android:layout_margin="@dimen/margin_x1_5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_phone" />
@@ -23,7 +23,7 @@
             android:id="@+id/notification_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="24dp"
+            android:layout_margin="@dimen/margin_x1_5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_notification" />
@@ -32,7 +32,7 @@
             android:id="@+id/name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="@dimen/margin_x4"
             android:textColor="@color/gray_intro_text"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -56,7 +56,7 @@
             android:id="@+id/balance_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/margin_main"
             android:textColor="@color/gray_intro_text"
             android:textSize="48sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,9 +68,9 @@
             android:id="@+id/balance_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/margin_main"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/margin_main"
             android:background="@drawable/bg_profile_gradient"
             android:paddingStart="20dp"
             android:paddingTop="28dp"
@@ -86,9 +86,9 @@
             android:id="@+id/orders_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/margin_main"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/margin_main"
             android:background="@drawable/bg_profile_gradient"
             android:paddingStart="20dp"
             android:paddingTop="28dp"
@@ -104,9 +104,9 @@
             android:id="@+id/withdrawal_applications_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/margin_main"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/margin_main"
             android:background="@drawable/bg_profile_gradient"
             android:paddingStart="20dp"
             android:paddingTop="28dp"
@@ -122,9 +122,9 @@
             android:id="@+id/accounts_and_cards_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/margin_main"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/margin_main"
             android:background="@drawable/bg_profile_gradient"
             android:paddingStart="20dp"
             android:paddingTop="28dp"
@@ -140,9 +140,9 @@
             android:id="@+id/support_service_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/margin_main"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/margin_main"
             android:background="@drawable/bg_profile_gradient"
             android:paddingStart="20dp"
             android:paddingTop="28dp"
@@ -159,7 +159,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="@dimen/margin_x1_5"
             android:drawableStart="@drawable/ic_logout"
             android:drawablePadding="16dp"
             android:text="@string/exit"
