--- a/app/src/main/res/layout/item_whithdraw_date.xml
+++ b/app/src/main/res/layout/item_whithdraw_date.xml
@@ -11,8 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="@dimen/margin_main"
+        android:layout_marginBottom="@dimen/margin_main"
         android:textColor="@color/gray_intro_text"
         android:textSize="24sp"
         android:textStyle="bold"
