--- a/app/src/main/res/layout/item_withdrawal.xml
+++ b/app/src/main/res/layout/item_withdrawal.xml
@@ -23,9 +23,9 @@
         android:id="@+id/background"
         android:layout_width="308dp"
         android:layout_height="74dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_main"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="@dimen/margin_x1_5"
         android:layout_marginBottom="8dp"
         android:background="@drawable/bg_profile_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -70,7 +70,7 @@
         android:id="@+id/chevron_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_main"
         app:layout_constraintBottom_toBottomOf="@+id/amount_tv"
         app:layout_constraintEnd_toEndOf="@+id/background"
         app:layout_constraintTop_toTopOf="@+id/amount_tv"
