--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -121,7 +121,7 @@
             app:popEnterAnim="@animator/slide_in_left"
             app:popExitAnim="@animator/slide_out_right" />
         <argument
-            android:name="withdrawal"
+            android:name="withdraw"
             app:argType="taxi.kassa.model.responses.Withdraw" />
     </fragment>
 
