--- a/app/src/main/res/layout/fragment_withdraws.xml
+++ b/app/src/main/res/layout/fragment_withdraws.xml
@@ -50,6 +50,12 @@
         tools:itemCount="8"
         tools:listitem="@layout/item_withdraw" />
 
+    <include
+        app:layout_constraintTop_toBottomOf="@+id/withdraws_title"
+        android:id="@+id/empty_withdraws"
+        layout="@layout/empty_withdraws_screen"
+        android:visibility="gone" />
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
