fixed input code logic

--- a/app/src/main/res/layout/fragment_auth_sign_up.xml
+++ b/app/src/main/res/layout/fragment_auth_sign_up.xml
@@ -60,7 +60,7 @@
             android:textColor="#FF4A4A" />
 
         <Button
-            android:id="@+id/btn_signup"
+            android:id="@+id/signup_button"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginStart="0dp"
